--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-root"></div>
+    <div id="modal-root"></div>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
+      This HTM file is a template.
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
